updated description in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background: '/img/bg-index.jpg'
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
       <h2 class="font-weight-bold mb-4 serif-font">Khasi Digital Resources Project</h2>
-      <p class="lead mb-4">Khasi is a low-resource language spoken in Meghalaya. This initiative is a volunteer effort to provide Digital resources.</p>
+      <p class="lead mb-4">Khasi is a low-resource language spoken in Meghalaya, India. This initiative is a volunteer effort to provide Digital resources.</p>
       <!--<a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">About me</a>-->
     </div>
     <div class="col-md-6 text-right pl-0 pl-lg-4">
